updated readme/ final commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="container">
-    <header class="row text-center bg-primary text-white">
+    <header class="row text-center bg-info text-white">
         <h1>Weather Dashboard</h1>
     </header>
 
